# CompGeom

./: .gitignore  CMakeLists.txt
src/geometry/: point.cpp  point.h  segment.cpp  segment.h
src/segment_intersection/: segments_intersection.cpp  segments_intersection.h  segments_intersection_test.cpp
